# sentiment_collector

./: .env.sample  Cargo.toml  README.md
scripts/: build.sh
src/: analyzer.rs  database.rs  main.rs
src/analyzer/: bard_api.rs  openai_api.rs  vadar.rs
